--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -119,8 +119,8 @@ main {
 
 @media (max-width: 40rem){
   :root {
-    --fs-xxl: 2.25rem;
-    --fs-xl:  1.75rem;
+    --fs-xxl: 2.5rem;
+    --fs-xl:  2rem;
     --fs-l: 1.5rem;
     --fs-m: 1.25rem;
     --fs-s: 1rem;
@@ -128,9 +128,10 @@ main {
 
   .title__presentation {
     flex-direction: column;
+    margin: 30px;
 
     h1, h2, h3, h4 {
-      margin: 10px 0 10px 0;
+      margin: 5px 0 5px 0;
     }
 
   }
